# musicvisualizer

./: CMakeLists.txt  README.md
src/: audioengine.cpp  audioengine.h  buffertextureprovider.cpp  buffertextureprovider.h  constants.h  fftvisualizationdata.cpp  fftvisualizationdata.h  fftwrapper.cpp  fftwrapper.h  main.cpp  main.qml  qml.qrc  samplevisualizationdata.cpp  samplevisualizationdata.h  tonegenerator.cpp  tonegenerator.h  visualizationdata.cpp  visualizationdata.h  wavefilewriter.cpp  wavefilewriter.h
src/models/: qqmlvariantlistmodel.cpp  qqmlvariantlistmodel.h
src/qml/: LedScreen.qml  main.qml  main2.qml  spectogram.qml  videosynth.qml
